--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
@@ -19,6 +18,33 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
+# lock files (uncomment if you want to ignore them)
 pnpm-lock.yaml
+# package-lock.json
+# yarn.lock
 
-.astro
+# editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Astro specific
+.astro/
+
+# Cache files
+.cache/
+
+# Temporary files
+.tmp/
+.temp/
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Local Netlify folder
+.netlify/
